<resources>
    <string name="app_name">Swoosh</string>
    <string name="womens">Womens</string>
    <string name="mens">Mens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="select_mens">select mens</string>
    <string name="select_womens">select womens</string>
    <string name="select_co_ed">select co-ed</string>
    <string name="league_background">League Background</string>
    <string name="swoosh_logo">swoosh_logo</string>
    <string name="desired_league">Desired League</string>
    <string name="next">NEXT</string>
    <string name="welcome_background">Welcome Background</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league.</string>
    <string name="get_started">GET STARTED</string>
    <string name="beginner">Beginner</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="finish">FINISH</string>
    <string name="baller">Baller</string>
    <string name="i_am_a">I am a...</string>
    <string name="background_image">Background Image</string>
    <string name="searchLeague">Looking for a co-ed beginner league near you...</string>
</resources>
